<resources>
    <string name="app_name">AndroidStarter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="menu">menu</string>
    <string name="mails">Mails</string>
    <string name="floating_button">floating_button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">background</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="enter_name">Enter name</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
</resources>