<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.mail_details.MailDetailsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/back_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/bgImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/background"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameLabel" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bgImg"
        app:layout_constraintEnd_toEndOf="@id/bgImg"
        app:layout_constraintStart_toStartOf="@id/bgImg"
        app:layout_constraintTop_toTopOf="@id/bgImg"
        tools:text="J" />

    <TextView
        android:id="@+id/nameLabel"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Name" />

    <TextView
        android:id="@+id/name"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/time"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/bgImg"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/time"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameLabel"
        tools:text="10 AM" />

    <TextView
        android:id="@+id/subjectLabel"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subject"
        app:layout_constraintBottom_toTopOf="@id/subject"
        app:layout_constraintEnd_toEndOf="@id/subject"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/subject"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="Subject" />

    <TextView
        android:id="@+id/subject"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectLabel"
        tools:text="About leave request" />


    <TextView
        android:id="@+id/bodyLabel"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/body"
        app:layout_constraintEnd_toEndOf="@id/body"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/body"
        app:layout_constraintTop_toBottomOf="@id/subject"
        tools:text="body" />

    <TextView
        android:id="@+id/body"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyLabel"
        tools:text="Body of the mail" />


    <View
        android:id="@+id/overlayContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorText"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:textAlignment="center"
        android:textColor="?attr/colorError"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>